fix: nested links alignment

--- a/src/css/internal-docs.css
+++ b/src/css/internal-docs.css
@@ -7,3 +7,7 @@
 .theme-doc-sidebar-item-link-level-2 {
   padding-left: 25px;
 }
+
+.theme-doc-sidebar-item-link-level-2:first-child {
+  margin-top: 4px;
+}
